--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build frontend # TODO: Unverified
         run: |
-          bash rebuild_frontend.sh
+          bash scripts/rebuild_frontend.sh
       - name: Build wheels for Linux
         uses: pypa/cibuildwheel@v2.19.2
       - name: Upload Linux wheels as artifact
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build frontend # TODO: Unverified
         run: |
-          bash rebuild_frontend.sh
+          bash scripts/rebuild_frontend.sh
       - name: Build wheels for macOS
         uses: pypa/cibuildwheel@v2.19.2
       - name: Upload macOS wheels as artifact
