--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ include = ["agentsociety*"]
 
 [tool.cibuildwheel]
 build = ["cp3*manylinux_x86_64", "cp3*macosx_arm64"]
-skip = ["cp36-*", "cp37-*", "cp38-*"]
+skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*"]
 
 [tool.cibuildwheel.linux]
 repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
