--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,8 +10,8 @@ name: Upload Python Package
 
 on:
   push:
-    branches:
-      - main
+    tags: [ 'v*.*.*' ]
+
   release:
     types: [published]
 
