--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build frontend # TODO: Unverified
+      - name: Build frontend
         run: |
           bash scripts/rebuild_frontend.sh
       - name: Build wheels for Linux
@@ -41,7 +41,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build frontend # TODO: Unverified
+      - name: Build frontend
         run: |
           bash scripts/rebuild_frontend.sh
       - name: Build wheels for macOS
