--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "agentsociety"
-version = "1.3.2" # change it for each release
+version = "1.3.3" # change it for each release
 description = "LLM-based city environment agent building library"
 authors = [
     { name = "Yuwei Yan", email = "pinkgranite86@gmail.com" },
@@ -23,6 +23,7 @@ requires-python = ">=3.11"
 dependencies = [
     "aiodocker>=0.24.0",
     "asyncpg>=0.30.0",
+    "boto3>=1.37",
     "click>=8.0.0",
     "cramjam>=2.9.0",
     "dashscope>=1.14.1",
