--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "casdoor-react-sdk": "^1.2.0",
     "dayjs": "^1.11.13",
     "deck.gl": "^9.0.38",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "mapbox-gl": "^3.9.0",
     "mobx": "^6.13.5",
