update benchmark github action

--- a/.github/workflows/agentsociety-benchmark-publish.yml
+++ b/.github/workflows/agentsociety-benchmark-publish.yml
@@ -17,4 +17,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v3
       - run: cd packages/agentsociety-benchmark && uv build
-      - run: uv publish --trusted-publishing always
+      - run: uv publish
+    env:
+      PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
