--- a/.github/workflows/agentsociety-benchmark-publish.yml
+++ b/.github/workflows/agentsociety-benchmark-publish.yml
@@ -17,6 +17,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v3
       - run: cd packages/agentsociety-benchmark && uv build
-      - run: uv publish
-    env:
-      PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+      - run: uv publish --trusted-publishing always
