simplify metric, use environment to export metrics with static keys

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.uv.workspace]
 members = ["packages/*"]
-exclude = []
+exclude = ["packages/agentsocietyenv"]
 
 [tool.uv.sources]
 agentsociety = { workspace = true }
